<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <AbsoluteLayout
        android:id="@+id/AbsoluteLayout1"
        android:layout_width="355dp"
        android:layout_height="700dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_x="-3dp"
            android:layout_y="18dp"
            android:src="@drawable/telecom" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_x="36dp"
            android:layout_y="176dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/us"
            android:ems="10"
            android:hint="@string/lgin"
            android:inputType="textEmailAddress"
            android:paddingRight="50dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="209dp"
            android:layout_y="432dp"
            android:text="@string/insc"
            android:textColor="#ff0099cc" />

        <Button
            android:id="@+id/bnt1"
            style="@style/dialog_button"
            android:layout_width="108dp"
            android:layout_marginRight="2.0dip"
            android:layout_x="51dp"
            android:layout_y="348dp"
            android:text="@string/btn_login_text" />

        <Button
            android:id="@+id/bnt2"
            style="@style/dialog_button"
            android:layout_width="108dp"
            android:layout_marginRight="2.0dip"
            android:layout_x="166dp"
            android:layout_y="348dp"
            android:text="@string/btn_annuler_text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="40dp"
            android:layout_y="228dp"
            android:hint="@string/pwd" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="42dp"
            android:layout_y="152dp"
            android:hint="@string/lgin"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_x="40dp"
            android:layout_y="250dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/ps"
            android:hint="@string/pwd" />
    </AbsoluteLayout>

</ScrollView>